k8s/user-apps/gitea/manifests/gitea-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  labels: &labels
    app.kubernetes.io/name: gitea
    app.kubernetes.io/component: gitea-server
spec:
  selector: *labels
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: ssh
      port: 22
      targetPort: ssh
